--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     //implementation 'com.github.bumptech.glide:okhttp3-integration:1.4.0@jar'  // To use Glide with OkHttp
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
+    implementation 'androidx.paging:paging-runtime:2.1.0'
 
     // If you want to use the GPU Filters
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
