--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
         
     }
     dependencies {
@@ -20,6 +21,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
+
         
     }
 }
